<resources>
    <string name="app_name">GZ Truyen</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="truyen_tranh">Truyện Tranh</string>
    <string name="truyen_chu">Truyện chữ</string>
    <string name="kham_pha">Khám Phá</string>
    <string name="toi">Tôi</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="detail_fragment">Detail fragment</string>
    <string name="chapters_fragment">Chapters fragment</string>
    <string name="de_cu">Truyện Đề Cử</string>
    <string name="b_ng_x_p_h_ng">Bảng xếp hạng</string>
    <string name="ph_n_lo_i">Phân loại</string>
    <string name="search">Search</string>
    <string name="truy_n_m_i_c_p_nh_p">Truyện mới cập nhập</string>
<<<<<<< Updated upstream
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
=======
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> Stashed changes
</resources>