<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_truyen_tranh">

    <fragment
        android:id="@+id/navigation_truyen_tranh"
        android:name="com.example.gztruyen.fragment.truyentranh.TruyenTranhFragment"
        android:label="@string/truyen_tranh"
        tools:layout="@layout/fragment_truyen_tranh" />

    <fragment
        android:id="@+id/navigation_truyen_chu"
        android:name="com.example.gztruyen.fragment.truyenchu.TruyenChuFragment"
        android:label="@string/truyen_chu"
        tools:layout="@layout/fragment_truyen_chu" />

    <fragment
        android:id="@+id/navigation_user_detail"
        android:name="com.example.gztruyen.fragment.userdetail.UserDetailFragment"
        android:label="@string/toi"
        tools:layout="@layout/fragment_user_detail" />
</navigation>