<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.truyenchu.TruyenChuFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/Decu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/de_cu"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch" />

    <ImageButton
        android:id="@+id/btnSearch"
        android:layout_width="61dp"
        android:layout_height="45dp"
        android:background="#00FFFFFF"
        android:src="@android:drawable/ic_menu_search"
        app:layout_constraintBottom_toBottomOf="@+id/Decu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Decu"
        android:contentDescription="@string/search" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Decu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:iss_auto_cycle="true"
                app:iss_corner_radius="10"
                app:iss_delay="1000"
                app:iss_period="1000"
                app:iss_title_background="@drawable/transparent_background" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/layout_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_ng_x_p_h_ng"
            android:textAlignment="center"
            android:layout_weight="1"
            app:drawableTopCompat="@drawable/rank" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ph_n_lo_i"
            android:textAlignment="center"
            android:layout_weight="1"
            app:drawableTopCompat="@drawable/baseline_window_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/dexuat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/truy_n_m_i_c_p_nh_p"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_truyen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/dexuat" />

</androidx.constraintlayout.widget.ConstraintLayout>